# dns-proxy

./: .gitignore  Cargo.toml  Dockerfile  readme.md
src/: cmdline.rs  main.rs  resolver.rs
